<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="menu_play">Play</string>
<string name="app_name">Flashcards</string>
<string name="menu_decks">Manage decks</string>
<string name="lbl_manage_deck">Manage deck</string>
<string name="menu_cards">Manage cards</string>
<string name="lbl_card_options">Manage card</string>
<string name="lbl_no_cards">This deck is empty, press the menu key to add new cards</string>
<string name="menu_insert">Add a new card</string>
<string name="menu_remove_card">Remove this card</string>
<string name="menu_edit_card">Edit card info</string>
<string name="lbl_save">Save</string>
<string name="body">Back Face</string>
<string name="edit_card">Edit card</string>
<string name="lbl_save_and_add_more">Save &amp; Add New</string>
<string name="rcd_saved">Record Saved</string>
<string name="lbl_success">Success</string>
<string name="lbl_fail">Fail</string>
<string name="menu_reverse">Reverse Front/Back</string>
<string name="lbl_play_empty">There are not enough cards, add at least two different cards to play.</string>
<string name="lbl_no_decks">There are currently no decks, create one to start</string>
<string name="menu_edit_deck">Edit deck info</string>
<string name="lbl_cancel">Cancel</string>
<string name="delete">Delete</string>
<string name="menu_todeck">Add to a deck</string>
<string name="menu_edit_many">Edit many</string>
<string name="menu_create_deck">Create a new deck</string>
<string name="lbl_delete_allcards_question">Are you sure? All cards will Also be deleted.</string>
<string name="menu_delete_deck">Remove this deck</string>
<string name="btn_add_cards_to_deck">Add cards to this deck</string>
<string name="menu_import_deck">Import a deck</string>
<string name="menu_import_cards_for_deck">Import cards for this deck</string>
<string name="lbl_description">Description</string>
<string name="lbl_deck_name">Deck Name</string>
<string name="lbl_accept">Confirm</string>
<string name="lbl_remove_deck">Remove Deck</string>
<string name="menu_manage_deck_cards">Manage cards of this deck</string>
<string name="menu_create_card">Create a new card</string>
<string name="lbl_remove_card_confirm">Are you sure to remove this card?</string>
<string name="menu_settings">Settings</string>
<string name="lbl_place_in_deck">Place in this deck</string>
<string name="lbl_front_title">Front Title</string>
<string name="lbl_front_desc">Front Description</string>
<string name="lbl_name">Name</string>
<string name="lbl_back_title">Back Title</string>
<string name="lbl_back_desc">Back Description</string>
<string name="lbl_flip_card">Flip card</string>
<string name="lbl_clear">Clear</string>
<string name="lbl_front">Front</string>
<string name="lbl_back">Back</string>
<string name="lbl_import">Import</string>
<string name="lbl_import_empty">To import a CSV File, place it under the folder &quot;Flashcards&quot; on your SD Card and then select it here.</string>
<string name="lbl_play">Play</string>
<string name="lbl_edit_card_confirm">This will terminate the current game. Are you sure?</string>
<string name="lbl_results">Results</string>
<string name="lbl_retry">Retry</string>
<string name="lbl_exit">Exit</string>
<string name="lbl_successes">Successes: %d</string>
<string name="lbl_fails">Fails: %d</string>
</resources>